@@ -3,10 +3,6 @@ package coffeeshout.racinggame.domain;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import coffeeshout.fixture.PlayerFixture;
-import coffeeshout.racinggame.domain.RacingGame;
-import coffeeshout.racinggame.domain.Runner;
-import coffeeshout.racinggame.domain.Runners;
-import coffeeshout.racinggame.domain.SpeedCalculator;
 import coffeeshout.room.domain.player.Player;
 import java.time.Instant;
 import java.util.List;
@@ -23,10 +19,10 @@ class RunnersTest {
     @Test
     void 플레이어의_속도를_업데이트할_수_있다() {
         // when
-        runners.updateSpeed(players.get(0), 5, speedCalculator, Instant.now());
+        runners.updateSpeed(players.getFirst(), 5, speedCalculator, Instant.now());
 
         // then
-        assertThat(runners.getRunners().get(0).getSpeed()).isEqualTo(30);
+        assertThat(runners.getRunners().getFirst().getSpeed()).isEqualTo(30);
     }
 
     @Test
@@ -43,7 +39,7 @@ class RunnersTest {
     void 우승자를_찾을_수_있다() {
         // given
         final Instant now = Instant.now();
-        runners.updateSpeed(players.get(0), 10, speedCalculator, now);
+        runners.updateSpeed(players.getFirst(), 10, speedCalculator, now);
         for (int i = 0; i < 100; i++) {
             runners.moveAll(now);
         }
@@ -52,7 +48,7 @@ class RunnersTest {
         final Runner winner = runners.findWinner().get();
 
         // then
-        assertThat(winner.getPlayer()).isEqualTo(players.get(0));
+        assertThat(winner.getPlayer()).isEqualTo(players.getFirst());
     }
 
     @Test
@@ -65,7 +61,7 @@ class RunnersTest {
     void 우승자가_있는지_확인할_수_있다() {
         // given
         final Instant now = Instant.now();
-        runners.updateSpeed(players.get(0), 10, speedCalculator, now);
+        runners.updateSpeed(players.getFirst(), 10, speedCalculator, now);
         for (int i = 0; i < 100; i++) {
             runners.moveAll(now);
         }
@@ -90,7 +86,7 @@ class RunnersTest {
     @Test
     void 모든_러너의_속도를_조회할_수_있다() {
         // given
-        runners.updateSpeed(players.get(0), 8, speedCalculator, Instant.now());
+        runners.updateSpeed(players.getFirst(), 8, speedCalculator, Instant.now());
         runners.updateSpeed(players.get(1), 8, speedCalculator, Instant.now());
 
         // then
@@ -101,7 +97,7 @@ class RunnersTest {
     void 모든_러너가_완주했는지_확인할_수_있다() {
         // given
         final Instant now = Instant.now();
-        runners.updateSpeed(players.get(0), 10, speedCalculator, now);
+        runners.updateSpeed(players.getFirst(), 10, speedCalculator, now);
         runners.updateSpeed(players.get(1), 10, speedCalculator, now);
         for (int i = 0; i < 100; i++) {
             runners.moveAll(now);
@@ -135,6 +131,6 @@ class RunnersTest {
         runners.initialLastTapTime(time);
 
         // then
-        assertThat(runners.getRunners().get(0).getLastSpeedUpdateTime()).isEqualTo(time);
+        assertThat(runners.getRunners().getFirst().getLastSpeedUpdateTime()).isEqualTo(time);
     }
 }
